--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "next": "^14.2.16",
     "react": "^18",
     "react-calendar": "^5.1.0",
+    "react-currency-input-field": "^3.8.0",
     "react-dom": "^18",
-    "recharts": "^2.13.0"
+    "react-input-field": "^1.2.4",
+    "recharts": "^2.13.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
