--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@types/react-big-calendar": "^1.8.12",
+    "moment": "^2.30.1",
     "next": "^14.2.16",
     "react": "^18",
+    "react-big-calendar": "^1.15.0",
     "react-calendar": "^5.1.0",
     "react-currency-input-field": "^3.8.0",
     "react-dom": "^18",
