--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-big-calendar": "^1.8.12",
     "moment": "^2.30.1",
     "next": "^14.2.16",
+    "prisma": "^5.21.1",
     "react": "^18",
     "react-big-calendar": "^1.15.0",
     "react-calendar": "^5.1.0",
