--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@prisma/client": "^5.21.1",
     "@types/react-big-calendar": "^1.8.12",
     "moment": "^2.30.1",
     "next": "^14.2.16",
